--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,7 +5,13 @@
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
     <item
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/ic_search"
+        android:title="@string/search"/>
+
+    <item
         android:id="@+id/moreFragment"
         android:icon="@drawable/ic_hamburger"
         android:title="@string/more" />
+
 </menu>
