--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -14,9 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="6dp"
-        app:cardCornerRadius="16dp">
+        app:cardCornerRadius="@dimen/spacing_normal">
 
         <ImageView
+            android:adjustViewBounds="true"
             android:layout_width="100dp"
             android:layout_height="146dp"
             android:scaleType="centerCrop"
