--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,52 +15,24 @@
         android:layout_height="match_parent"
         tools:context=".screens.search.SearchFragment">
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+<!--        <TextView-->
+        <!--            android:id="@+id/tvCheckResult"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:textSize="24sp"-->
+        <!--            app:checkResult="@{viewModel.resultSearch}"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcSearch"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/spacing_normal"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/searchView"
+            app:layout_constraintTop_toTopOf="parent"
             app:listSearch="@{viewModel.resultSearch}" />
 
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/searchView">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-                <include layout="@layout/item_search_shimmer" />
-
-            </LinearLayout>
-        </com.facebook.shimmer.ShimmerFrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
