--- a/app/src/main/res/layout/item_movie_type.xml
+++ b/app/src/main/res/layout/item_movie_type.xml
@@ -17,12 +17,13 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="18dp"
             app:cardCornerRadius="16dp">
 
             <ImageView
-                android:layout_width="144dp"
-                android:layout_height="212dp"
+                android:layout_width="100dp"
+                android:layout_height="144dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:imgUrl="@{movie.posterPath}"
@@ -30,5 +31,4 @@
 
         </androidx.cardview.widget.CardView>
     </FrameLayout>
-
 </layout>
