--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="slate_gray">#67686D</color>
     <color name="fresh_blue">#0296E5</color>
     <color name="charcoal_gray">#3A3F47</color>
+    <color name="light_brownish_green">#ECECEC</color>
+    <color name="dark_slate_gray">#92929D</color>
 </resources>
